use flex to fix hosting bar on mobile devices

--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -48,33 +48,30 @@ html {
     background: #A890BC;
     color: #eee;
     font-size: 0.9em;
-    font-weight: normal;
-    display: block;
     padding: 0.75em 1em;
+    font-weight: normal;
+    display: flex;
+    justify-content: space-between;
     text-decoration: none;
 }
 
 .hosting {
-    padding: 0.75em 1em;
     color: #eee;
     text-decoration: none;
 }
 
 .theme {
-    float: right;
-    margin-left: auto;
-    margin-right: 0;
 }
 
 .hosting .link, .theme .link {
     color: #CEBFDA;
     text-decoration: none;
-    transition: all 200ms;
+    transition-duration: 200ms;
 }
 
 .hosting .link:hover, .theme .link:hover {
     color: #e7d7f4;
-    transition: all 200ms;
+    transition-duration: 200ms;
 }
 
 .main-container {
